--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL=
+MONGODB_URL=mongodb+srv://admin:HJ$uVd.tCDbm3T*@cluster0.kfy3b.mongodb.net/blog-api?retryWrites=true&w=majority
+JWT_SECRET_KEY=f9bf78b9a18ce6d46a0cd2b0b86df9da
